<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_category"
        android:id="@+id/dialog_ca_heading"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/dialog_ca_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_ca_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

</LinearLayout>
